29) kernel: ralink_wifi: fix kernel api mismatch u(g)id types to u(g)id_t.<br>
30) kernel: ralink_wifi: allow mac address changes.<br>
31) kernel: ralink_wifi: MT7612 fix LastTxRate update.<br>
32) kernel: ralink_wifi: MT76xx anonse 40MHz SGI only if 40MHz BW enabled.<br>
33) kernel: drop bogus check in file_open_root().<br>
34) kernel: mips: dma-default: fix 32-bit fall back to GFP_DMA.<br>
35) kernel: mips: hibernate: flush TLB entries earlier.<br>
36) kernel: mips: bitops.h: Avoid inline asm for constant FLS.<br>
37) kernel: net: gro: should be ECN friendly.<br>
38) kernel: net: gro: should aggregate frames without DF.<br>
39) kernel: net: add address assign type "SET".<br>
40) kernel: net: init perm_addr in register_netdevice().<br>
41) kernel: ethtool: set addr_assign_type to NET_ADDR_SET when addr is passed on create.<br>
42) kernel: ethtool: consolidate work with ethtool_ops.<br>
43) kernel: ethtool: make .get_dump_data() harder to misuse by drivers.<br>
44) kernel: netfilter: ctnetlink: fix leak in error path of ctnetlink_create_expect.<br>
45) kernel: netfilter: ctnetlink: don't permit ct creation with random tuple.<br>
46) kernel: netlink: validate addr_len on bind.<br>
47) kernel: netlink: change presentation of portid in procfs to unsigned.<br>
48) kernel: rtnetlink: fix error return code in rtnl_link_fill().<br>
49) kernel: bridge: use dev->addr_assign_type to see if user change mac.<br>
50) kernel: inetpeer: fix token initialization.<br>
51) kernel: ipv4: use standard iovec primitive in raw_probe_proto_opt.<br>
<br>
<br>
<b>TODO:</b><br>
1) add Default ipv6 gateway in VPN UI (vpnDGWSIX variable).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
5) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>